@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-30T00:29:18Z",
+  "timestamp" : "2022-07-02T00:32:43Z",
   "count_outdated" : 491,
   "uniques_outdated" : 90,
-  "count" : 504,
-  "uniques" : 94,
+  "count" : 535,
+  "uniques" : 96,
   "views" : [
     {
       "timestamp": "2022-06-20T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 9, 9 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
+      "count": 31,
+      "count_minmax": [ 31, 31 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
