@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 2,
+  "count": 44,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-06-20T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-06-26T00:00:00Z",
       "count": 9,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
+      "count": 31,
+      "uniques": 2
     }
   ]
 }
