@@ -1,3 +1,10 @@
+2022-07-02T00:32:43Z:
+* notice: last 14d: unq all: 4 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 491 / 94 504
+* notice: next accum: outdated-unq outdated-all / unq all: 90 491 / 96 535
+* notice: prev exec diff / last date diff / accum: unq all: +2 +31 -0 -0 / +2 +31 -0 -0 / 2 31
+* notice: removed / changed dates: [] / [2022-07-01]
+
 2022-06-30T00:29:18Z:
 * notice: last 14d: unq all: 2 13
 * notice: prev accum: outdated-unq outdated-all / unq all: 89 396 / 94 485
